data/raw_logs/semantic/sem_15.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_15.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_15.c:1:35: error: invalid operands to binary + (have 'int *' and 'char *')
    1 | int main() { int a[5]; int* p = a + "hi"; }
      |                                 ~ ^
      |                                 | |
      |                                 | char *
      |                                 int *
